--- a/6conclusion.tex
+++ b/6conclusion.tex
@@ -17,6 +17,7 @@ Besides, this segmentation process also allowed end users to describe trajectori
 Overall, the proposed framework and algorithms have been reasonably successful in extracting and retrieving object specific semantics. Given that the trajectory information was stored in a pseudo-Cartesian coordinate manner, the concept used in the \versionTwoRet can be extended to various datasets of similar properties. The concluding remarks and future extensions for each of the proposed methods are covered in the following sub-sections.
 
 %\section*{Semantic Extraction, Representation and Retrieval}
+\vspace{1em}
 \subsection*{Colour Semantic Extraction}
 The proposed vehicle colour extraction methods described in both Section \ref{section:versionOneColorExtract}, and \ref{section:versiontwoColor} demonstrated robustness over existing handcrafted vehicle colour extraction methods in a low resolution scenario. By leveraging on the extracted dominant colour of each vehicle over its entire tracked life cycle, the proposed method averaged out the extracted dominant colours to obtain a good estimate of the vehicle's colour. As such, discoloration due to occlusion and shadows was averaged out as well in the proposed method. Experiments recorded in Chapter \ref{subsec:vehiclecolourchamferdistanceexperiment} showed that the proposed method was able to retrieve vehicle colours accurately: 91\% of the time within the top 3 results.   %While the proposed method might not be able to outperform techniques that apply CNN and SVMs such as those of \cite{hu2015vehicle} (94\%), the proposed method was able to put up a good fight. 
 Although the definition of colour terms using the 330 Munsell Colour chips did not favour the proposed method, the adoption of \cite{riemersma}'s low cost estimation of difference in colours %in junction with the definition of colours terms 
@@ -24,6 +25,7 @@ along with the tuples provided by \cite{munroe2010color} proved to be fairly acc
 
 In the future, the mapping of colour terms can be further improved by clustering the compressed data provided by \citeA{zaslavsky2018efficient}. Besides, the segmented ROI from the response map of a CNN can also be applied for the extraction of colour information. The experiments in this thesis showed that the use of distance measures to differentiate colours may not be as efficient and accurate when compared to certain deep learning methods. Hence, deep learning models can be explored in the future to improve the classification of these colour terms.
 
+\vspace{1em}
 \subsection*{Motion Semantic Representation and Retrieval}
 %As dictated in the scope of this work, the bounding box of the vehicles were assumed to be provided. Using the positions of the bounding boxes, the centroid of each box was used to mark the location of the vehicles. 
 In Chapter \ref{subsec:motions9binextract}, the motion information was derived using the previous and current positions of the vehicle. These motion information are then segmented into 9 bins representing various directional categories. While this method provided adequate representation of motion, the hard-coded motion information that was stored beforehand made the retrieval process challenging. Users had to provide the queries accurately to retrieve the desired video footage. At best, the \versionOneRet engine can achieve an accuracy of 95\%, however, at the cost of having to craft input queries very carefully. Also, this proposed method did not show promising recall rates. 
@@ -32,5 +34,6 @@ The drawbacks in \versionOneRet led to the development of \versionTwoRet. In Cha
 
 While the proposed retrieval engines were able to successfully retrieve the desired video footages to a good extent, there are still some inherent weaknesses. In terms of increasing its usefulness, the retrieval engine can be extended to retrieve shots containing multiple trajectories. This would be very useful in scenarios involving multiple vehicles such as accidents. Next, the retrieval engine can also be extended to include specific parking spots of the vehicles. In the current setup, the retrieval engine only evaluates the results based on its overall trajectories or movements within the car park. However, in a car park scenario, the parking location of the vehicle should also be considered as an \emph{event} while describing activities in a car park.
 
+\vspace{1em}
 \subsection*{Final Remark}
 This work done in this thesis has achieved the objectives of identifying and extracting useful object semantics that can accurately describe the events in a car park scenario. A retrieval engine that takes in user-described trajectories along with other object specific semantics such as colour as well as time and date information allows users to easily define the desired queries in a realistic manner. As the retrieval engine was developed using web based technology, it is easy for such systems to be implemented directly on modern web browsers which are fully independent of the underlying Operating System (OS) of the machine. This also allows the results to be retrieved quicker as the resulting videos do not need to be decoded and re-encoded to specific time periods as \emph{HTML5} video supports `Media Fragments URI'. For instance, to play a video from the 10th second to the 20th second, a time parameter (\emph{i.e.} $t=10,20$) can easily specified. While the overall goal of this thesis was achieved, we presented a number of future extensions for the betterment of the proposed system.
